--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ base64 = "0.22.1"
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
 claims = "0.8.0"
 config = "0.15.6"
+handlebars = "6.3.1"
+htmlescape = "0.3.1"
 log = "0.4.25"
 rand = { version = "0.8.5", features = ["std_rng"] }
 secrecy = { version = "0.10.3", features = ["serde"] }
